--- a/modules/contrib/content_planner/modules/content_kanban/templates/content-kanban-column.html.twig
+++ b/modules/contrib/content_planner/modules/content_kanban/templates/content-kanban-column.html.twig
@@ -1,9 +1,8 @@
 <td id="{{ column_id }}" data-state_id="{{ state_id }}" class="kanban-column droppable">{{ column }}
-  {% if nodes %}
-
-    {% for node in nodes %}
+  {% if entities %}
+    {% for entity in entities %}
       <div class="content-kanban-entry">
-        {{ node }}
+        {{ entity }}
       </div>
     {% endfor %}
 
