--- a/modules/contrib/content_planner/modules/content_kanban/templates/content-kanban.html.twig
+++ b/modules/contrib/content_planner/modules/content_kanban/templates/content-kanban.html.twig
@@ -2,11 +2,13 @@
 
   <h2 id="{{ kanban_id }}">{{ kanban_label }}</h2>
 
-  {% if permissions.create_node %}
+  {% if permissions.create_entity %}
     <ul class="action-links">
-      {% for node_type, button_label in permissions.create_node %}
+      {% for bundle, button_label in permissions.create_entity %}
         <li>
-          <a class="button button-action button--primary button--small" href="{{ path('node.add', {'node_type': node_type}) }}?destination={{ path('content_kanban.kanban') }}">{{ button_label }}</a>
+          {% if addEntitiesLinks[bundle] %}
+            <a class="button button-action button--primary button--small" href="{{ addEntitiesLinks[bundle] }}?destination={{ path('content_kanban.kanban') }}">{{ button_label }}</a>
+          {% endif %}
         </li>
       {% endfor %}
     </ul>
