--- a/modules/contrib/jquery_colorpicker/templates/jquery-colorpicker.html.twig
+++ b/modules/contrib/jquery_colorpicker/templates/jquery-colorpicker.html.twig
@@ -1,8 +1,8 @@
 <div class="jquery_colorpicker">
 	<div id="{{ id }}-inner_wrapper" class="inner_wrapper">
 		<div class="color_picker" style="background-color:{{ default_color }};">
-			<span class="hash">#</span><input{{ attributes }} />{{ children }}
-			<div class="description">{{ 'Enter a hexidecimal color value. Enabling javascript will replace this input with a graphical color selector'|t }}</div>
+			<input{{ attributes }} />{{ children }}
+			<div class="description">{{ 'Enter a hexidecimal color value in the format #XXXXXX. Enabling javascript will replace this input with a graphical color selector'|t }}</div>
 		</div>
 	</div>
 	{% if show_remove %}
