--- a/modules/custom/invoicer/templates/invoicer.html.twig
+++ b/modules/custom/invoicer/templates/invoicer.html.twig
@@ -23,6 +23,7 @@
     <div class="clearfix">{{ element.field_items }}</div>
     <div class="clearfix">
         <div class="sub_total">{{ element.sub_total }}</div>
+        <div class="gst">{{ element.gst }}</div>
         <div class="total">{{ element.total }}</div>
     </div>
     {{ element.comments }}
