add header left and header right region

--- a/themes/custom/agerpblue/components/05-templates/layout/layout-default.twig
+++ b/themes/custom/agerpblue/components/05-templates/layout/layout-default.twig
@@ -9,7 +9,12 @@
   <div class="content">
     <div>
       <div style="padding: 20px;background-color:#E57373; min-height: 80px">
-        <p>Header top</p>
+        <p>Header left</p>
+      </div>
+    </div>
+	<div>
+      <div style="padding: 20px;background-color:#E57373; min-height: 80px">
+        <p>Header right</p>
       </div>
     </div>
 	<div>
