--- a/themes/custom/agerpblue/components/05-templates/layout/regions.twig
+++ b/themes/custom/agerpblue/components/05-templates/layout/regions.twig
@@ -4,7 +4,17 @@
     <div style="background-color: #E57373; width: 44px; height: 44px; border-radius: 50%;"></div>
   </span>
   <span class="list-item__text">
-    <h6>Header top</h6>
+    <h6>Header left</h6>
+    <p>Blocks: Primary navigation, user navigation, site search. The header is always present. It holds a navbar component and the logo.</p>
+  </span>
+</div>
+
+<div class="list-item">
+  <span class="list-item__avatar list-item__avatar--medium">
+    <div style="background-color: #E57373; width: 44px; height: 44px; border-radius: 50%;"></div>
+  </span>
+  <span class="list-item__text">
+    <h6>Header right</h6>
     <p>Blocks: Primary navigation, user navigation, site search. The header is always present. It holds a navbar component and the logo.</p>
   </span>
 </div>
