add div to header left and header right

--- a/themes/custom/agerpblue/components/05-templates/layout/layout-default.twig
+++ b/themes/custom/agerpblue/components/05-templates/layout/layout-default.twig
@@ -7,16 +7,18 @@
     </div>
   </div>
   <div class="content">
-    <div>
-      <div style="padding: 20px;background-color:#E57373; min-height: 80px">
-        <p>Header left</p>
-      </div>
-    </div>
-	<div>
-      <div style="padding: 20px;background-color:#E57373; min-height: 80px">
-        <p>Header right</p>
-      </div>
-    </div>
+    <div class="row">
+		<div>
+		  <div style="padding: 20px;background-color:#E57373; min-height: 80px">
+			<p>Header left</p>
+		  </div>
+		</div>
+		<div>
+		  <div style="padding: 20px;background-color:#E57373; min-height: 80px">
+			<p>Header right</p>
+		  </div>
+		</div>
+	</div>
 	<div>
       <div style="padding: 20px;background-color:#E57373; min-height: 80px">
         <p>Header</p>
