header left change twig

--- a/themes/custom/agerpblue/templates/layout/region--header_left.html.twig
+++ b/themes/custom/agerpblue/templates/layout/region--header_left.html.twig
@@ -1,7 +1,7 @@
 {% if content %}
-  <nav {{ attributes.addClass('navbar navbar-default navbar-fixed-top') }} role="banner">
-    <div class="container container--navbar">
+  <footer class="site-footer" role="contentinfo">
+    <div class="container row">
       {{ content }}
     </div>
-  </nav>
+  </footer>
 {% endif %}
