--- a/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
+++ b/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
@@ -1,5 +1,5 @@
 {% if content %}
-  <footer class="site-footer" role="contentinfo">
+  <footer class="site-footer" role="contentinfo", float: right>
     <div class="container row">
       {{ content }}
     </div>
