modify twig header left and header right

--- a/themes/custom/agerpblue/templates/layout/region--header_left.html.twig
+++ b/themes/custom/agerpblue/templates/layout/region--header_left.html.twig
@@ -1,6 +1,5 @@
 {% if content %}
-  <nav {{ attributes.addClass('navbar navbar-default navbar-fixed-top') }} role="banner">
-    <div class="container container--navbar">
+  <nav {{ attributes.addClass('navbar navbar-default') }} role="banner" float: left>
       {{ content }}
     </div>
   </nav>
