swap right and left region in info.yml

--- a/themes/custom/agerpblue/templates/layout/region--header.html.twig
+++ b/themes/custom/agerpblue/templates/layout/region--header.html.twig
@@ -1,5 +1,5 @@
 {% if content %}
-  <nav {{ attributes.addClass('navbar navbar-default') }} role="banner">
+  <nav {{ attributes.addClass('navbar navbar-default') }} role="contentinfo">
     <div class="container container--navbar">
       {{ content }}
     </div>
