header left add container

--- a/themes/custom/agerpblue/templates/layout/region--header_left.html.twig
+++ b/themes/custom/agerpblue/templates/layout/region--header_left.html.twig
@@ -1,5 +1,6 @@
 {% if content %}
   <nav {{ attributes.addClass('navbar navbar-default') }} role="banner" float: left>
+  <div class="container container--navbar">
       {{ content }}
     </div>
   </nav>
