--- a/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
+++ b/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
@@ -1,7 +1,6 @@
 {% if content %}
-  <footer class="site-footer" role="contentinfo", float: right>
-  <div class="container row">
-      {{ content }}
+  <footer class="site-footer" role="contentinfo",>
+        {{ content }}
     </div>
   </footer>
 {% endif %}
