add header-right.css in library and file

--- a/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
+++ b/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
@@ -1,6 +1,6 @@
 {% if content %}
-  <footer class="site-footer" role="contentinfo",>
+  <header_right class="header-right" role="contentinfo",>
         {{ content }}
     </div>
-  </footer>
+  </header_right>
 {% endif %}
