--- a/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
+++ b/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
@@ -1,5 +1,5 @@
 {% if content %}
-  <header_right class="header-right" role="contentinfo",>
+  <header_right class="navbar" role="contentinfo">
         {{ content }}
     </div>
   </header_right>
