remove header right.scss and add navbar class to header right

--- a/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
+++ b/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
@@ -1,6 +1,5 @@
 {% if content %}
-  <header_right class="navbar" role="contentinfo">
+  <header_right class="navbar" role="banner">
         {{ content }}
-    </div>
   </header_right>
 {% endif %}
