add class nav to header right

--- a/themes/custom/agerpblue/templates/layout/region--header_left.html.twig
+++ b/themes/custom/agerpblue/templates/layout/region--header_left.html.twig
@@ -1,5 +1,5 @@
 {% if content %}
-  <nav {{ attributes.addClass('navbar navbar-default') }} role="banner" float: left>
+  <nav {{ attributes.addClass('navbar navbar-default') }} role="banner">
   <div class="container container--navbar">
       {{ content }}
     </div>
