--- a/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
+++ b/themes/custom/agerpblue/templates/layout/region--header_right.html.twig
@@ -1,7 +1,5 @@
 {% if content %}
-  <nav {{ attributes.addClass('navbar') }} role="banner">
-  <div class="container container--navbar">
-      {{ content }}
-    </div>
-  </nav>
+  <footer class="site-footer" role="banner",>
+        {{ content }}
+  </footer>
 {% endif %}
