--- a/profiles/contrib/social/modules/social_features/social_landing_page/templates/page--node--landing-page.html.twig
+++ b/profiles/contrib/social/modules/social_features/social_landing_page/templates/page--node--landing-page.html.twig
@@ -27,6 +27,14 @@
  */
 #}
 
+{% if page.header_right %}
+  {{ page.header_right }}
+{% endif %}
+  
+{% if page.header_left %}
+  {{ page.header_left }}
+{% endif %}
+
 {% if page.header %}
   {{ page.header }}
 {% endif %}
@@ -57,4 +65,8 @@
 
 {% if page.footer %}
   {{ page.footer }}
+{% endif %}
+
+{% if page.footer_bottom %}
+  {{ page.footer_bottom }}
 {% endif %}
