add breadcrumb region in landing page

--- a/profiles/contrib/social/modules/social_features/social_landing_page/templates/page--node--landing-page.html.twig
+++ b/profiles/contrib/social/modules/social_features/social_landing_page/templates/page--node--landing-page.html.twig
@@ -41,7 +41,9 @@
 
 <main id="content" class="main-container" role="main">
 
-  {# No breadcrumbs for landing pages #}
+  {{% if page.breadcrumb %}
+    {{ page.breadcrumb }}
+  {% endif %}
   {# Hero region will be in section #}
   {# No secondary navigation #}
   {% if page.secondary_navigation %}
