breadcrumb region on landing page

--- a/profiles/contrib/social/modules/social_features/social_landing_page/templates/page--node--landing-page.html.twig
+++ b/profiles/contrib/social/modules/social_features/social_landing_page/templates/page--node--landing-page.html.twig
@@ -41,7 +41,7 @@
 
 <main id="content" class="main-container" role="main">
 
-  {{% if page.breadcrumb %}
+  {% if page.breadcrumb %}
     {{ page.breadcrumb }}
   {% endif %}
   {# Hero region will be in section #}
