--- a/themes/custom/agerpblue/color/css/preview-base.css
+++ b/themes/custom/agerpblue/color/css/preview-base.css
@@ -3189,12 +3189,23 @@ a.btn {
       flex-wrap: wrap;
 }
 
-.color-preview .main-container {
+.color-preview {
   overflow: hidden;
   min-height: 100%;
   min-height: calc(100vh - 50px);
   padding-top: 50px;
   padding-bottom: 100px;
+  position: relative;
+  z-index: 0;
+  width: 100%;
+}
+
+.main-container {
+  overflow: hidden;
+  min-height: 100%;
+  min-height: calc(100vh - 50px);
+  padding-top: 0px;
+  padding-bottom: 50px;
   position: relative;
   z-index: 0;
   width: 100%;
